<resources>
    <string name="app_name">Calculator</string>
    <string name="choose_option">Choose option:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="enter_first_number">Enter first number:</string>
    <string name="enter_second_number">Enter second number:</string>
</resources>